<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/detail_layout"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene"
    >


    <TextView
        android:id="@+id/bodyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/default_text_size"
        android:text="@string/file_name"
        />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:text="@string/status"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyLabel"
        />

    <TextView
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"


        android:textAlignment="center"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bodyLabel"
        app:layout_constraintTop_toTopOf="@+id/bodyLabel"
        android:text="adsgsdgdsfgdsfddfasdfasdfdsfasdfваdsf"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:textAlignment="center"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/statusLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statusLabel"

        app:layout_constraintTop_toTopOf="@id/statusLabel" />



    <Button
        android:id="@+id/ok_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"

        />


</androidx.constraintlayout.motion.widget.MotionLayout>